--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,5 @@
 * {
-	outline: 1px solid BLACK;
+	outline: 1px solid white;
 }
 body {
 	touch-action: manipulation;
@@ -8,8 +8,13 @@ body {
 	display: grid;
 	width: 100vw;
 	height: 100svh;
-	grid-template-columns: minmax(auto,1fr) 5fr 1fr;
+	grid-template-columns: 5rem 5fr 1fr;
 	grid-template-rows: 50px 1fr;
+	overflow: hidden; 
+	& > div{
+		min-height: 0;
+		min-width: 0;
+	}
 }
 .header {
 	grid-column: 1 /4;
@@ -32,4 +37,15 @@ body {
 	grid-column: 3/4;
 	grid-row: 2/3;
 	background-color: #201f1e;
+}
+
+@media (max-width: 55rem) {
+
+    .main-content {
+        grid-column: 1/3;
+        grid-row: 2/3;
+        background-color: #11100f;
+    }
+
+
 }
