--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,9 +1,159 @@
 .content-header {
-    display: flex;
-    color: white;
+	display: flex;
+	color: #78bafd;
+	margin: 24px;
+	font-size: 1.5rem;
+	height: 2.25rem;
 	& .icon {
-		height: 2rem;
+		height: 100%;
 		& img {
+			max-height: 100%;
+		}
+	}
+	& p {
+		margin-left: 8px;
+	}
+	& .dropdown {
+		margin-left: 8px;
+		height: 100%;
+
+		display: flex;
+		& button {
+			height: 100%;
+			background-color: transparent;
+			border: none;
+			margin: 0;
+			padding: 0;
+			cursor: pointer;
+			border-radius: 6px;
+			&:hover {
+				backdrop-filter: brightness(250%);
+			}
+		}
+		& img {
+			padding: 8px 8px;
+
+			max-height: 100%;
+		}
+	}
+}
+.add-a-task-container {
+	display: flex;
+	flex-direction: column;
+	margin: 24px;
+	position: relative;
+	&::before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 1px;
+		background-color: #484644;
+		top: 50%;
+	}
+}
+.add-a-task-input-wrapper {
+	display: flex;
+	font-size: 0.875rem;
+	height: calc(1.3125rem + 36px);
+	padding: 18px 24px;
+	justify-content: flex-start;
+	background-color: #252423;
+	border-radius: 4px 4px 0 0;
+	& .icon {
+		height: 100%;
+	}
+	& img {
+		max-height: 100%;
+		width: 100%;
+		height: 100%;
+	}
+
+	& input {
+		background-color: #252423;
+		border: none;
+		margin-left: 12px;
+		height: 100%;
+		color: white;
+		flex-grow: 1;
+		&::placeholder {
+			color: #78bafd;
+		}
+		&:focus {
+			outline: none;
+			&::placeholder {
+				color: white;
+			}
+		}
+	}
+}
+.add-a-task-submit-wrapper {
+	display: flex;
+	font-size: 0.875rem;
+	height: calc(1.3125rem + 36px);
+	padding: 0 24px;
+	justify-content: space-between;
+	background-color: #201f1e;
+	border-radius: 0 0 4px 4px;
+	& .icon {
+		height: 100%;
+		padding: 18px 0;
+	}
+	& img {
+		max-height: 100%;
+	}
+	& .add-a-task-button {
+		padding: 0;
+		margin: 0;
+		border: 1px solid white;
+		color: white;
+		margin-top: 9px;
+		margin-bottom: 9px;
+		padding-left: 8px;
+		padding-right: 8px;
+		background-color: transparent;
+		&:hover {
+			cursor: pointer;
+			backdrop-filter: brightness(150%);
+		}
+	}
+}
+
+.content {
+	font-size: 0.875rem;
+	margin: 24px;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	& .task-list-item {
+		border-radius: 6px;
+		display: flex;
+		padding: 0 24px;
+		min-height: 2.625rem;
+		background-color: #252423;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		align-items: center;
+		
+		& .item-text-container{
+			margin-left: 12px;
+			& .project-name{
+				color: #a5a3a1;
+			}
+		}
+	}
+	& .icon{
+		
+	}
+	& .important{
+		margin-left: auto;
+	}
+	& .icon, .important {
+		height: 1.3125rem;
+		flex-shrink: 0;
+
+		& img {
+			height: 100%;
 			max-height: 100%;
 		}
 	}
