--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -95,8 +95,22 @@
 	background-color: #201f1e;
 	border-radius: 0 0 4px 4px;
 	& .icon {
-		height: 100%;
-		padding: 18px 0;
+		margin-top: 9px;
+		margin-bottom: 9px;
+		border: 1px solid white;
+		display: flex;
+		align-items: center;
+
+		& input {
+			background-color: transparent;
+			color: white;
+			border: none;
+			padding-left: 8px;
+			padding-right: 8px;
+			&:focus{
+				outline: 0;
+			}
+		}
 	}
 	& img {
 		max-height: 100%;
@@ -138,7 +152,6 @@
 			display: flex;
 			width: 100%;
 			height: 100%;
-			
 		}
 		& .checkbox {
 			appearance: none;
@@ -149,13 +162,12 @@
 			&:checked + label {
 				background-image: url("../images/checked.svg");
 			}
-			&:not(:checked) + label{
+			&:not(:checked) + label {
 				background-image: url("../images/unchecked.svg");
 			}
-			&:not(:checked):hover + label{
+			&:not(:checked):hover + label {
 				background-image: url("../images/unchecked-hover.svg");
 			}
-			
 		}
 		& .item-text-container {
 			margin-left: 12px;
@@ -165,15 +177,38 @@
 		}
 	}
 	& .icon {
+		height: 1.3125rem;
 		position: relative;
 		aspect-ratio: 1;
 	}
 	& .important {
+		height: 1.8rem;
+		position: relative;
 		margin-left: auto;
+		aspect-ratio: 1;
+		& label {
+			display: flex;
+			width: 100%;
+			height: 100%;
+		}
+		& .important-checkbox {
+			appearance: none;
+			display: flex;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			&:checked + label {
+				background-image: url("../images/important-checked.svg");
+				background-size: contain;
+			}
+			&:not(:checked) + label {
+				background-image: url("../images/important-unchecked.svg");
+				background-size: contain;
+			}
+		}
 	}
 	& .icon,
 	.important {
-		height: 1.3125rem;
 		flex-shrink: 0;
 
 		& img {
