--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -107,7 +107,7 @@
 			border: none;
 			padding-left: 8px;
 			padding-right: 8px;
-			&:focus{
+			&:focus {
 				outline: 0;
 			}
 		}
@@ -175,12 +175,13 @@
 				color: #a5a3a1;
 			}
 		}
+		& .icon {
+			height: 1.3125rem;
+			position: relative;
+			aspect-ratio: 1;
+		}
 	}
-	& .icon {
-		height: 1.3125rem;
-		position: relative;
-		aspect-ratio: 1;
-	}
+
 	& .important {
 		height: 1.8rem;
 		position: relative;
@@ -214,6 +215,49 @@
 		& img {
 			height: 100%;
 			max-height: 100%;
+		}
+	}
+}
+.task-list-group {
+	display: flex;
+	padding: 0 24px 0 0;
+	min-height: calc(2.625rem + 20px);
+	background-color: transparent;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	align-items: center;
+	position: relative;
+	& .group-text-container {
+		display: flex;
+		margin-left: 12px;
+		& p:first-child {
+			font-weight: bold;
+		}
+		& p:last-child {
+			margin-left: 8px;
+		}
+	}
+	& .icon {
+		height: 1rem;
+		position: relative;
+		aspect-ratio: 1;
+
+		& img {
+			transform: rotate(90deg);
+		}
+	}
+	&.collapsed {
+		& .icon img {
+			transform: rotate(0deg);
+		}
+		&::after {
+			position: absolute;
+			content: "";
+			bottom: 0;
+			height: 1px;
+			width: 98%;
+			left: 1%;
+			background-color: #a5a3a1;
 		}
 	}
 }
