--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -159,6 +159,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
+			cursor: pointer;
 			&:checked + label {
 				background-image: url("../images/checked.svg");
 			}
@@ -198,6 +199,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
+			cursor: pointer;
 			&:checked + label {
 				background-image: url("../images/important-checked.svg");
 				background-size: contain;
@@ -227,20 +229,25 @@
 	padding-bottom: 10px;
 	align-items: center;
 	position: relative;
+	cursor: pointer;
 	& .group-text-container {
 		display: flex;
 		margin-left: 12px;
+		pointer-events: none;
+		
 		& p:first-child {
 			font-weight: bold;
 		}
 		& p:last-child {
 			margin-left: 8px;
 		}
+		
 	}
 	& .icon {
 		height: 1rem;
 		position: relative;
 		aspect-ratio: 1;
+		pointer-events: none;
 
 		& img {
 			transform: rotate(90deg);
