--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -96,24 +96,36 @@
 	border-radius: 0 0 4px 4px;
 	& .icon {
 		margin-top: 9px;
+		position: relative;
 		margin-bottom: 9px;
-		border: 1px solid white;
+		/* border: 1px solid white; */
+		align-self: center;
 		display: flex;
 		align-items: center;
-
+		height: calc(80% - 18px);
+		
 		& input {
 			background-color: transparent;
+			position: absolute;
+			opacity: 0;
+			pointer-events: none;
 			color: white;
 			border: none;
 			padding-left: 8px;
 			padding-right: 8px;
+			height: 100%;
 			&:focus {
 				outline: 0;
+			}
+			& + p {
+				color: white;
+				margin-left: 8px;
 			}
 		}
 	}
 	& img {
 		max-height: 100%;
+		cursor: pointer;
 	}
 	& .add-a-task-button {
 		padding: 0;
