--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,7 +10,7 @@ body {
 	height: 100svh;
 	--left-col: min(18rem,100%);
 	--right-col: min(18rem,100%);
-	grid-template-columns: var(--left-col) 1fr var(--right-col);
+	grid-template-columns: var(--left-col) 1fr ;
 	grid-template-rows: 50px 1fr;
 	overflow: hidden; 
 	& > div{
@@ -44,11 +44,11 @@ body {
 
 @media (max-width: 55rem) {
 
-    .main-content {
+    /* .main-content {
         grid-column: 1/3;
         grid-row: 2/3;
         background-color: #11100f;
-    }
+    } */
 
 
 }
